# liv-dioxus

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  wdis.html
assets/: tailwind.css
prisma/: schema.prisma
prisma/migrations/20240606065456_init/: migration.sql
prisma/migrations/20240626011856_init/: migration.sql
prisma/migrations/20240626012620_pay/: migration.sql
prisma/prisma_cli/: Cargo.toml
src/: db.rs  main.rs
src/api/: mod.rs
src/api/mobile/: mod.rs
src/components/button/: mod.rs
src/jingfen/: auth.rs  goods.json  mod.rs
src/npay/: view.rs
